--- a/public/Front/css/style.css
+++ b/public/Front/css/style.css
@@ -714,14 +714,14 @@ li {
 .form-login {
 	background-color: rgba(255, 255, 255, 0.123);
 	backdrop-filter: blur(12px);
-			height: 250px;
-			width: 200px;
-			padding: 2rem;
-			border-radius: 12px;
+	height: 250px;
+	width: 200px;
+	padding: 2rem;
+	border-radius: 12px;
 }
 
 
-.form-login input[type='email'],input[type='password'] {
+.form-login input[type='email'], input[type='password'] {
 	width: 100%;
 	height: 30px;
 	background: none;
@@ -729,9 +729,10 @@ li {
 	border: none;
 	border-bottom: #fff 2px solid;
 	margin-bottom: 10px;
+	color: white;
 }
 
-.form-login input::placeholder{
+.form-login input::placeholder {
 	color: rgba(255, 255, 255, 0.589);
 }
 
@@ -751,9 +752,10 @@ li {
 	color: #0f0f11;
 	border-radius: 2px;
 	border: none;
-	margin-top: 50%;
+	margin-top: 35%;
 	cursor: pointer;
 	transition: all .5s ease;
+	margin-bottom: 9px;
 }
 
 .form-login .button-login:hover {
@@ -761,4 +763,138 @@ li {
 	background-color: transparent;
 	border-bottom: #0ee951 2px solid;
 	color: #f7f9fd;
+}
+
+.control {
+	font-family: arial;
+	display: block;
+	position: relative;
+	padding-left: 28px;
+	margin-bottom: 9px;
+	margin-top: 20px;
+	padding-top: 0px;
+	cursor: pointer;
+	font-size: 16px;
+	color: white;
+}
+
+.control input {
+	position: absolute;
+	z-index: -1;
+	opacity: 0;
+}
+
+.control_indicator {
+	position: absolute;
+	top: 0px;
+	left: 0;
+	height: 21px;
+	width: 21px;
+	background: #e6e6e6;
+	border: 0px solid #000000;
+	border-radius: 20px;
+}
+
+.control:hover input~.control_indicator,
+.control input:focus~.control_indicator {
+	background: #cccccc;
+}
+
+.control input:checked~.control_indicator {
+	background: #0ee951;
+}
+
+.control:hover input:not([disabled]):checked~.control_indicator,
+.control input:checked:focus~.control_indicator {
+	background: #0ee951;
+}
+
+.control input:disabled~.control_indicator {
+	background: #e6e6e6;
+	opacity: 1;
+	pointer-events: none;
+}
+
+.control_indicator:after {
+	box-sizing: unset;
+	content: '';
+	position: absolute;
+	display: none;
+}
+
+.control input:checked~.control_indicator:after {
+	display: block;
+}
+
+.control-checkbox .control_indicator:after {
+	left: 7px;
+	top: 5px;
+	width: 3px;
+	height: 7px;
+	border: solid #ffffff;
+	border-width: 0 3px 3px 0;
+	transform: rotate(45deg);
+}
+
+.control-checkbox input:disabled~.control_indicator:after {
+	border-color: #7b7b7b;
+}
+
+.control-checkbox .control_indicator::before {
+	content: '';
+	display: block;
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 4.551rem;
+	height: 4.5rem;
+	margin-left: -1.3rem;
+	margin-top: -1.3rem;
+	background: #0ee951;
+	border-radius: 2.037rem;
+	opacity: 0.3;
+	z-index: 99999;
+	transform: scale(0);
+}
+
+@keyframes s-ripple {
+	0% {
+		transform: scale(0);
+	}
+
+	20% {
+		transform: scale(1);
+	}
+
+	100% {
+		opacity: 0;
+		transform: scale(1);
+	}
+}
+
+@keyframes s-ripple-dup {
+	0% {
+		transform: scale(0);
+	}
+
+	30% {
+		transform: scale(1);
+	}
+
+	60% {
+		transform: scale(1);
+	}
+
+	100% {
+		opacity: 0;
+		transform: scale(1);
+	}
+}
+
+.control-checkbox input+.control_indicator::before {
+	animation: s-ripple 250ms ease-out;
+}
+
+.control-checkbox input:checked+.control_indicator::before {
+	animation-name: s-ripple-dup;
 }
