--- a/public/Front/css/style.css
+++ b/public/Front/css/style.css
@@ -473,10 +473,6 @@ li {
 	}
 }
 
-
-/**********************/
-/*     Newsletter     */
-/**********************/
 .form-control-input,
 .form-control-textarea {
 	width: 100%;
@@ -490,9 +486,6 @@ li {
 }
 
 
-/******************************/
-/*     Back To Top Button     */
-/******************************/
 #myBtn {
 	z-index: 99;
 	right: 20px;
@@ -897,4 +890,41 @@ li {
 
 .control-checkbox input:checked+.control_indicator::before {
 	animation-name: s-ripple-dup;
+}
+
+.modal {
+	display: none;
+	position: fixed;
+	z-index: 1;
+	padding-top: 100px;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgb(0, 0, 0);
+	background-color: rgba(0, 0, 0, 0.4);
+	transition: all .5s ease;
+}
+
+.modal-content {
+	background-color: #fefefe;
+	margin: auto;
+	padding: 20px;
+	border: 1px solid #888;
+	width: 80%;
+}
+
+.close {
+	color: #aaaaaa;
+	float: right;
+	font-size: 28px;
+	font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+	color: #000;
+	text-decoration: none;
+	cursor: pointer;
 }
